k8s/coinet-api-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinet-api-canary
  labels:
    app: coinet-api
    track: canary
spec:
  type: ClusterIP
  ports:
    - port: 4001
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: coinet-api
    track: canary
