k8s/coinet-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinet-api
  labels:
    app: coinet-api
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: coinet-api
