k8s/coinet-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinet-frontend
  labels:
    app: coinet-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: coinet-frontend
