k8s/coinet-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinet-postgres
  labels:
    app: coinet-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: coinet-postgres
