k8s/coinet-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coinet-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  tls:
    - hosts:
        - api.coinet.com
      secretName: coinet-api-tls
  rules:
    - host: api.coinet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coinet-api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coinet-api-canary
                port:
                  number: 4001
