k8s/coinet-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coinet-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - coinet.com
      secretName: coinet-frontend-tls
  rules:
    - host: coinet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coinet-frontend
                port:
                  number: 80
